# shift

./: .buildinfo  .gitignore  .pre-commit-config.yaml  API_REFERENCE.html  CHANGELOG.md  CONTRIBUTING.md  IMPROVEMENTS.md  MCP_SERVER.html  QUICKSTART.md  README.md  genindex.html  index.html  mcp_server_config.yaml  objects.inv  pyproject.toml  pytest.ini  search.html  searchindex.js
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: gh-pages.yml  main_test.yaml  publish.yml  publish_to_pypi.yaml  pull_request_tests.yml  tests.yml
_sources/: API_REFERENCE.md.txt  MCP_SERVER.md.txt  index.md  index.md.txt
_sources/example/: example.ipynb
_sources/references/: clustering.md.txt  data_model.md  data_model.md.txt  dist_graph.md.txt  equipment_mapper.rst.txt  index.md.txt  mesh_network.md  openstreet_graph.md.txt  openstreet_parcel.md.txt  openstreet_roads.md.txt  phase_mapper.rst.txt  plot_manager.md.txt  polygon_from_points.md.txt  prsg.md  voltage_mapper.rst.txt
_sources/usage/: building_graph.md.txt  building_system.md  building_system.md.txt  complete_example.md.txt  fetching_parcels.md.txt  index.md  mapping_phases.md.txt  mapping_voltages.md.txt  updating_branch_type.md.txt
docs/: API_REFERENCE.md  MCP_SERVER.md  Makefile  _config.yml  _toc.yml  conf.py  index.md  make.bat
docs/example/: example.ipynb  resstock_comstock_interface.py  shift_modeling.py
docs/references/: clustering.md  dist_graph.md  equipment_mapper.rst  index.md  mesh_network.md  nearest_points.md  openstreet_parcel.md  openstreet_roads.md  parcel.md  phase_mapper.rst  plot_manager.md  plots.md  polygon_from_points.md  split_edges.md  system_builder.rst  voltage_mapper.rst
docs/usage/: building_graph.md  building_system.md  complete_example.md  fetching_parcels.md  index.md  mapping_equipment.md  mapping_phases.md  mapping_voltages.md  updating_branch_type.md
example/: example.html
examples/: claude_desktop_config.json  mcp_client_example.py
references/: clustering.html  data_model.html  dist_graph.html  equipment_mapper.html  index.html  mesh_network.html  nearest_points.html  openstreet_graph.html  openstreet_parcel.html  openstreet_roads.html  phase_mapper.html  plot_manager.html  plots.html  polygon_from_points.html  prsg.html  split_edges.html  system_builder.html  voltage_mapper.html
src/shift/: __init__.py  base_graph_builder.py  cluster.py  constants.py  data_model.py  distribution_graph.py  exceptions.py  minified_distribution_graph.py  nearest_nodes.py  openstreet_graph_builder.py  openstreet_parcels.py  openstreet_roads.py  parcel.py  phase_mapper.py  plot_manager.py  plots.py  primary_network.py  quantity.py  split_network_edges.py  system_builder.py  update_plot_layout.py  version.py
src/shift/graph/: base_graph_builder.py  distribution_graph.py  openstreet_graph_builder.py  prsgb.py
src/shift/mapper/: balanced_phase_mapper.py  base_equipment_mapper.py  base_phase_mapper.py  base_voltage_mapper.py  edge_equipment_mapper.py  transformer_voltage_mapper.py
src/shift/mcp_server/: __init__.py  __main__.py  config.py  serializers.py  server.py  state.py  tools.py
src/shift/mcp_server/prompts/: __init__.py  workflows.py
src/shift/mcp_server/resources/: __init__.py  docs.py
src/shift/mcp_server/tools/: __init__.py
src/shift/mcp_server/tools/data_acquisition/: __init__.py  clustering.py  parcels.py  roads.py
src/shift/mcp_server/tools/documentation/: __init__.py  read.py  search.py
src/shift/mcp_server/tools/graph/: __init__.py  builder.py  edges.py  management.py  nodes.py  query.py
src/shift/mcp_server/tools/mapper/: __init__.py  equipment.py  phase.py  voltage.py
src/shift/mcp_server/tools/system/: __init__.py  builder.py  export.py
src/shift/mcp_server/tools/utilities/: __init__.py  geo.py  nearest.py  network.py
src/shift/parcel/: model.py  openstreet.py
src/shift/parcels/: openstreet_parcel_model.py
src/shift/utils/: get_cluster.py  mesh_network.py  nearest_points.py  polygon_from_points.py  split_network_edges.py
tests/: test_clustering.py  test_complete_system_from_location.py  test_data_model.py  test_exceptions.py  test_graph.py  test_import.py  test_mcp_server.py  test_parcels.py  test_plots.py  test_system_builder.py  test_utils.py
tests/models/p1rhs7_1247_time_series/: time_series_metadata.db
tests/test_mcp_server/: __init__.py  conftest.py  test_documentation_tools.py  test_graph_tools.py  test_mapper_tools.py  test_serializers.py  test_server.py  test_state_config.py  test_system_utility_tools.py
tests/test_mcp_server/example/: build_example.ipynb  resstock_comstock_interface.py  shift_modeling.py
usage/: building_graph.html  building_system.html  complete_example.html  fetching_parcels.html  index.html  mapping_equipment.html  mapping_phases.html  mapping_voltages.html  updating_branch_type.html
