[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nrel-shift"
version = "0.4.0"
description = "Framework for developing synthetic distribution feeder model."
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-clause"
keywords = []
authors = [
  { name = "Kapil Duwadi", email = "Kapil.Duwadi@nrel.gov" },
  { name = "Aadil Latif", email = "Aadil.Latif@nrel.gov" },
  { name = "Erik Pohl", email = "Erik.Pohl@nrel.gov" },
]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
]
dependencies = [
  "osmnx",
  "scikit-learn",
  "plotly",
  "geopy",
  "grid-data-models~=2.0.0",
  "importlib-metadata",
]

[project.optional-dependencies]
dev = ["pre-commit", "pytest", "ruff"]
doc = ["sphinx", "pydata-sphinx-theme", "myst-parser", "autodoc_pydantic"]

[project.urls]
Documentation = "https://github.com/NREL-Distribution-Suites/shift#readme"
Issues = "https://github.com/NREL-Distribution-Suites/shift/issues"
Source = "https://github.com/NREL-Distribution-Suites/shift"

[tool.hatch.version]
path = "src/shift/version.py"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".git",
  ".ruff_cache",
  ".venv",
  "_build",
  "build",
  "dist",
  "env",
  "venv",
]
line-length = 99
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = [
  "C901", # McCabe complexity
  "E4",   # Subset of pycodestyle (E)
  "E7",
  "E9",
  "F",    # Pyflakes
  "W",    # pycodestyle warnings
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.hatch.build.targets.wheel]
packages = ["src/shift"]
